--- a/index.html
+++ b/index.html
@@ -7,8 +7,30 @@
         <h1> Our Menu </h1>
         <h2> Falafel </h2>
         <p> Chickpea, herbs and spices</p>
+        <img src="falafel.jpg" width="240" height="135" alt="A falafel">
         <h2> Pasta Salad </h2>
         <p> Lettuce, vegetables and mozzarella </p>
-        <a href="location.html"> Our Location </a>
+        <img src="salad.jpg" width="240" height="135" alt="A pasta salad"> <br>
+        <a href="location.html"> Our Location </a> <br>
+        <style>
+            table, th, td{
+                border: 1px solid black;
+                border-collapse: collapse;
+            }    
+        </style>
+        <table>
+            <tr>
+                <th> Dishes </th>
+                <th> Price </th>
+            </tr>
+            <tr>
+                <td> Falafel </td>
+                <td> $10.00 </td>
+            </tr>
+            <tr>
+                <td> Past Salad </td>
+                <td> $12.00 </td>
+            </tr>
+        </table>
     </body>
 </html>
